--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^7.3.12",
     "expo": "~53.0.8",
     "expo-status-bar": "~2.2.3",
+    "firebase": "^11.7.3",
     "gestionclientes": "file:",
     "react": "19.0.0",
     "react-dom": "19.0.0",
